load(":defs.bzl", "aoc_day")

aoc_day("01")
aoc_day("02")
aoc_day("03")
#aoc_day("04", fetch_input = False)
#aoc_day("05")
#aoc_day("06")
#aoc_day("07")
#aoc_day("08")
#aoc_day("09")
#aoc_day("10", fetch_input= False)
#aoc_day("11", fetch_input= False)
#aoc_day("12")
#aoc_day("13")
#aoc_day("14")
#aoc_day("15")
#aoc_day("16")
#aoc_day("17")
#aoc_day("18")
#aoc_day("19")
#aoc_day("20")
#aoc_day("21")
#aoc_day("22")
#aoc_day("23")
#aoc_day("24")
#aoc_day("25")

